patch - fixed bug regarding flex-wrap for blog articles

--- a/src/app/styles/blog-globals.scss
+++ b/src/app/styles/blog-globals.scss
@@ -25,11 +25,10 @@ $-moz-osx-font-smoothing: grayscale;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(../../assets/images/backgrounds/projectshero-bg.webp);
   background-size: cover;
   background-attachment: fixed;
   color: white;
-  padding: 30px 0 40px;
+  padding: 120px 0 40px;
   
   & h1{
     text-shadow: 1px 1px 2px black;
@@ -152,6 +151,7 @@ $-moz-osx-font-smoothing: grayscale;
 
 .blog-section{
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
   margin: 40px 20px;
 }
